person page / genealogy - info hover - typeahead style

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1344,6 +1344,7 @@ passwordreminder.username.help = your username
 person.index.header                               = Search Dissertation Authors
 person.index.info                                 = infotext
 person.index.placeholder                          = Enter Person Name (Author, Advisor etc.) or Title 
+person.index.searchInfo                           = search for a thesis by a combination of author (first- / surname), title of thesis, university and year of publication
 person.new.formFirstName                          = First name
 person.new.formInfo                               = In case of unsureness, insert everything in last name
 person.new.formLastName                           = Last name
