--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1331,6 +1331,7 @@ passwordreminder.username.help = Ihr Benutzername
 person.index.header                               = Personensuche
 person.index.info                                 = infotext
 person.index.placeholder                          = Hier Personennamen (Doktorand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
+person.index.searchInfo                           = Suchen Sie nach einer Thesis durch eine Kombination aus Autor (Vor- / Nachname), Titel der Arbeit, Universit\u00E4t und Erscheinungsjahr
 person.new.formFirstName                          = Vorname
 person.new.formInfo                               = Bei Unsicherheit \u00FCber den Namen, alles in das Nachname-Feld eintragen
 person.new.formLastName                           = Nachname
