added personPage sidebar content and needed message properties

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -128,6 +128,7 @@ bibtex.actions.additional_url.delete         = delete
 bibtex.actions.additional_url.delete.title   = delete this additional URL
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
+bibtex.actions.bibtex.title                  = show this publication in BibTeX format
 bibtex.actions.copy.inactive                 = Sign in to copy this publication into your collection.
 bibtex.actions.copy.title                    = copy this publication to your repository
 bibtex.actions.delete.confirm                = Do you really want to delete this publication?
@@ -137,6 +138,7 @@ bibtex.actions.doi                           = DOI
 bibtex.actions.doi.inactive                  = No DOI is attached to this post.
 bibtex.actions.edit.title                    = edit this publication
 bibtex.actions.endnote                       = EndNote
+bibtex.actions.endnote.title                 = export this publication in Endnote format
 bibtex.actions.filedeleted                   = The file {0} has been deleted.
 bibtex.actions.filerenamed                   = The document {0} has been renamed to {1}.
 bibtex.actions.gold                          = community post
@@ -724,27 +726,24 @@ example = example
 
 export = export
 
-export.bibtex.faq                   = <a href="https://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="https://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
-export.bibtex.record                = BibTeX record
-export.bibtex.title                 = export as BibTeX
-export.burst.faq                    = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
-export.copyToLocalClipboard         = Copy citation to your local clipboard.
-export.copyToLocalClipboard.error   = Failed to copy the citation to your local clipboard. Please update your browser to the lastest version.
-export.copyToLocalClipboard.success = Copied citation to your local clipboard.
-export.csl.caption                  = CSL input format (JSON)
-export.csl.faq                      = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
-export.custom.faq                   = A custom <a href="https://www.jabref.org">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="https://help.jabref.org/en/CustomExports">here</a>.
-export.endnote.record               = Endnote record
-export.format                       = format
+export.bibtex.faq     = <a href="https://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="https://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
+export.bibtex.record  = BibTeX record
+export.bibtex.title   = export as BibTeX
+export.burst.faq      = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
+export.csl.caption    = CSL input format (JSON)
+export.csl.faq        = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
+export.custom.faq     = A custom <a href="https://www.jabref.org">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="https://help.jabref.org/en/CustomExports">here</a>.
+export.endnote.record = Endnote record
+export.format         = format
 # export page
-export.header                       = Export publications
-export.html.faq                     = This gives you a simple <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
-export.info                         = By selecting one of the formats you can export the publications of the page {0} in that format.
-export.jabref.explain               = These export filters are from <a href="https://www.jabref.org">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
-export.json.faq                     = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) is a lightweight exchange format for web programming with JavaScript. Using the <tt>callback</tt> parameter you get output in JSONP format.
-export.layout                       = export layout
-export.rss.faq                      = With an appropriate <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
-export.swrc.faq                     = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
+export.header         = Export publications
+export.html.faq       = This gives you a simple <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
+export.info           = By selecting one of the formats you can export the publications of the page {0} in that format.
+export.jabref.explain = These export filters are from <a href="https://www.jabref.org">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
+export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) is a lightweight exchange format for web programming with JavaScript. Using the <tt>callback</tt> parameter you get output in JSONP format.
+export.layout         = export layout
+export.rss.faq        = With an appropriate <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
+export.swrc.faq       = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
 
 # RSS feed titles
 feeds.bookmark    = Bookmark RSS feed for
@@ -1434,6 +1433,12 @@ person.show.thatsMeButton                         = That's me
 person.show.thatsMeLabel                          = User
 person.show.thatsNotMeButton                      = That's not me
 person.show.thesis                                = Theses
+person.sidebar                                    = 
+person.sidebar.linkedUserClaimText                = If you are this person you can claim this page. Please consider that you can only claim one person. 
+person.sidebar.linkedUserClaimedText              = This person has been claimed by a user. 
+person.sidebar.linkedUserDefaultInfoText          = Is that you? Logg in to claim this person. 
+person.sidebar.linkedUserTitle                    = Claim this person
+person.sidebar.linkedUserUnlinkText               = If you accidentally claimed this person you can revert that. Please be careful, this change is permanent.
 
 personalize = show personalized posts
 
@@ -1522,16 +1527,13 @@ post.meta.asGroup                                       = for
 post.meta.asPrivate                                     = as
 post.meta.batch_edit                                    = edit own posts
 post.meta.changedOn                                     = changed on
-post.meta.clipboard.title                               = clipboard actions for the displayed post of this list
 post.meta.copy_this_post                                = Copy this post.
 post.meta.display                                       = display
 post.meta.documents                                     = Here you can see all of your publication posts which have a document attached.
 post.meta.duplicates                                    = All of your publication posts that are stored in your collection at least twice.
 post.meta.edit                                          = edit
 post.meta.edit.title                                    = edit the details of all your posts from this list
-post.meta.export.title                                  = export options for displayed posts
 post.meta.filter                                        = filter
-post.meta.filter.title                                  = filter displayed posts
 post.meta.flag_as_spam                                  = spam
 post.meta.flag_as_spam.title                            = Mark this post as spam
 post.meta.helplink                                      = /help_en/Sorting%20Publications
@@ -1554,7 +1556,6 @@ post.meta.sort.criterion                                = sort by
 post.meta.sort.order                                    = order
 post.meta.sort.order.ascending                          = ascending
 post.meta.sort.order.descending                         = descending
-post.meta.sortorder.title                               = change order or sort of displayed posts
 post.meta.taggedBy                                      = by
 post.meta.taggedBy.community                            = by the community
 post.meta.taggedOn                                      = on
@@ -1875,7 +1876,6 @@ post_bookmark.heading      = Enter your bookmark data here
 
 post_publication.addons.desc        = You can install our Add-On or bookmarklet to post publications while browsing the web. The system can automatically extract meta information from various publishers and systems (<a href="/scraperinfo">full list of supported sites</a>).
 post_publication.addons.title       = OR: use our addon/bookmarklet to post publications while browsing the Web
-post_publication.desc               = You can search our publication repository for the publication you want to add. Just enter the title of the publication. You can also enter the ISBN, ISSN or DOI of the publication. We then try to get the meta information of the publication for you.
 post_publication.file.desc          = Upload the fulltext of the publication. We try to extract the meta information of the publication.
 post_publication.file.noinfo        = We could not extract any meta information, but we have already attached the uploaded file to this post. Please enter the meta information manually.
 post_publication.file.title         = upload document
@@ -1883,7 +1883,7 @@ post_publication.other.methods      = OR: use one of the following methods
 post_publication.search.info        = If you want to import multiple publications, please use our <a href="/import/publications">import page</a>.
 post_publication.search.loading     = searching for publications \u2026
 post_publication.search.notfound    = No match found. Please click here to post the publication manually.
-post_publication.search.placeholder = Search our repository for the publication you want to add
+post_publication.search.placeholder = Search publication by title, ISBN, ISSN or DOI
 
 posts = posts
 
@@ -1897,13 +1897,10 @@ previous = &lang;
 
 privacy = privacy
 
-publication.documents.rename            = Rename Document
-publication.documents.rename.progress   = renaming document
-publication.documents.rename.success    = Renamed document.
-publication.export.simple_bibtex.title  = show this publication in BibTeX format
-publication.export.simple_endnote.title = export this publication in Endnote format
-publication.export.title                = show this publication in {0} format
-publication.import.title                = Import publications
+publication.documents.rename          = Rename Document
+publication.documents.rename.progress = renaming document
+publication.documents.rename.success  = Renamed document.
+publication.import.title              = Import publications
 
 publications = publications
 
@@ -2118,9 +2115,6 @@ settings.editPublication.interFace.help.advanced            = {0}: all options a
 settings.editPublication.interFace.help.simple              = {0}: some "expert" options will be hidden
 settings.enabled                                            = enabled
 settings.english                                            = English
-settings.favouriteExports                                   = favourite export formats
-settings.favouriteExports.add                               = add export format
-settings.favouriteExports.hint                              = The citation formats that are shown in the tab bar below can be changed in the <a href="{0}">settings</a>.
 settings.female                                             = female
 settings.frequency                                          = frequency
 settings.friendOf                                           = I'm a friend of
@@ -2149,8 +2143,6 @@ settings.group.delUser.button.title                         = Remove this user f
 settings.group.delUser.help                                 = enter the name of the user you wish to remove from the group
 settings.group.delUser.noUser                               = The group currently has no members.
 settings.group.delete                                       = delete group
-settings.group.delete.description                           = Enter the name of the group that you want to have deleted. The corresponding group will have all members removed and will subsequently be deleted.
-settings.group.delete.success                               = Group has been successfully deleted.
 settings.group.deleteRequest                                = delete request
 settings.group.deleteRequest.title                          = Deletes the group creation request
 settings.group.deny                                         = deny join request of user {0}
@@ -2396,7 +2388,7 @@ synchronization.help.serverUserName                  = Your username on server
 synchronization.info                                 = On this page you can manually synchronize your posts with your configured systems. 
 synchronization.info.plan                            = At first you need to create a synchronization plan. The plan contains information about changed posts. You can check which changes will be performed during synchronization. After the creation of the plan you cn decide whether or not to perform the synchronization. Only creating the plan will chnge nothing in either system.
 synchronization.info.reset                           = If you see some errors in your synchronization plan, or if some error occures continually if you try to synchronize you can try to reset your synchronization status.
-synchronization.intro                                = Our synchronization service allows you to keep your bookmarks and publications in sync between two systems. Therefore, you need an account on both systems.
+synchronization.intro                                = Our synchronization service allows you to keep your bookmarks and publications in sync between two systems. Therefore, your need an account on both systems.
 synchronization.lastSyncResults                      = status of last synchronization
 synchronization.lastSyncTimes                        = time of last synchronization
 synchronization.lastWins                             = last wins
