--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2433,6 +2433,7 @@ system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gr
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
 system.offeredBy                         = {0} wird vom <a href="https://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="https://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
+system.pumaLogo                          = /resources_puma/image/puma_logo.png
 system.readOnly.notice                   = {0} ist momentam im schreibgesch\u00FCtzten Modus. Wir werden bald die vollst\u00E4ndige Funktionalit\u00E4t wiederherstellen. 
 system.recent                            = Hier sind die letzten Beitr\u00E4ge aufgelistet:
 system.recentlyDiscussed.intro.help      = Besuchen Sie unsere Hilfeseiten zu <a href='/help_de/KommentarRezensionBewertung'>Diskussionen</a> um mehr \u00FCber Rezensionen und Kommentare zu erfahren.
