small gui changes and l18n

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1728,6 +1728,8 @@ post.resource.journal.help                              = full (unabbreviated) j
 post.resource.key                                       = key
 post.resource.key.help                                  = Used by BibTeX for sorting entries without author or editor. Only necessary for incomplete entries.
 post.resource.misc                                      = misc fields
+post.resource.misc.                                     = 
+post.resource.misc.checkbox                             = expert view
 post.resource.misc.help                                 = this field can be used to import non-standard fields in addition to the predefined ones. Please use BibTeX compliant syntax, e.g. <tt>fieldName = {fieldValue},</tt>
 post.resource.month                                     = month
 post.resource.month.help                                = The month of publication. It can be abbreviated using the first three English letters; many systems then insert the correct localized month name.
