--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1714,6 +1714,8 @@ post.resource.journal.help                              = Voll ausgeschriebener 
 post.resource.key                                       = Sortierschl\u00FCssel
 post.resource.key.help                                  = Bei fehlenden Autor- oder Herausgeber-Feldern benutzt BibTeX dieses Feld f\u00FCr den Sortiervorgang. Nur notwendig bei unvollst\u00E4ndigen Eintr\u00E4gen.
 post.resource.misc                                      = weitere Felder
+post.resource.misc.                                     = 
+post.resource.misc.checkbox                             = Expertenmodus
 post.resource.misc.help                                 = In dieses Feld k\u00F6nnen Sie zus\u00E4tzliche Felder in BibTeX-vertr\u00E4glicher Schreibweise eintragen, beispielsweise <tt>Feldname = {Feldwert},</tt>
 post.resource.month                                     = Monat
 post.resource.month.help                                = Der Erscheinungsmonat. Er kann durch die drei ersten Buchstaben der englischen Monatsbezeichnung abgek\u00FCrzt werden. Viele Systeme setzen dann den richtig \u00FCbersetzten Monatsnamen ein.
