missing message keys restored

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -24,7 +24,7 @@ admin.actions.general              = Allgemeine Aktionen
 admin.actions.group                = Gruppe hinzuf\u00FCgen
 admin.actions.group.accept         = akzeptieren
 admin.actions.group.decline        = ablehnen
-admin.actions.group.decline.reason = Gruppenanfrage von {0} mit folgender Begr\u00FCndung l\u00F6schen
+admin.actions.group.decline.reason = Gruppenanfrage von {0} mit folgender Begr\u00FCndung l\u00F6schen:
 admin.actions.oauth                = OAuth Consumer bearbeiten
 admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
@@ -723,24 +723,27 @@ example = Beispiel
 
 export = Export
 
-export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
-export.bibtex.record  = BibTeX-Eintrag
-export.bibtex.title   = als BibTeX exportieren
-export.burst.faq      = Ein g\u00FCltiger <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
-export.csl.caption    = CSL Eingabeformat (JSON)
-export.csl.faq        = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
-export.custom.faq     = Ein benutzerspezifisches <a href="https://www.jabref.org/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
-export.endnote.record = Endnote-Eintrag
-export.format         = Format
+export.bibtex.faq                   = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
+export.bibtex.record                = BibTeX-Eintrag
+export.bibtex.title                 = als BibTeX exportieren
+export.burst.faq                    = Ein g\u00FCltiger <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="https://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
+export.copyToLocalClipboard         = Zitation zur lokalen Zwischenablage hinzuf\u00FCgen.
+export.copyToLocalClipboard.error   = Leider konnte die Zitation nicht in Ihre lokale Zwischenablage kopiert werden. Bitte aktualisieren Sie Ihren Browser auf die aktuellste Version.
+export.copyToLocalClipboard.success = Zitation zur lokalen Zwischenablage hinzugef\u00FCgt.
+export.csl.caption                  = CSL Eingabeformat (JSON)
+export.csl.faq                      = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
+export.custom.faq                   = Ein benutzerspezifisches <a href="https://www.jabref.org">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
+export.endnote.record               = Endnote-Eintrag
+export.format                       = Format
 #Export Seite
-export.header         = Publikationsexport
-export.html.faq       = Eine einfach formatierte <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
-export.info           = W\u00E4hlen Sie ein Format aus, in das die Publikationen der Seite {0} exportiert werden sollen.  
-export.jabref.explain = Diese Exportfilter stammen von <a href="https://www.jabref.org">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
-export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) ist ein leichtgewichtiges Austauschformat f\u00FCr die Webprogrammierung mit JavaScript. Mittels der Option <tt>callback</tt> erhalten Sie eine Ausgabe im JSONP-Format.
-export.layout         = Layout exportieren
-export.rss.faq        = Mit einem geeigneten <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
-export.swrc.faq       = Eine <a href="https://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
+export.header                       = Publikationsexport
+export.html.faq                     = Eine einfach formatierte <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
+export.info                         = W\u00E4hlen Sie ein Format aus, in das die Publikationen der Seite {0} exportiert werden sollen.  
+export.jabref.explain               = Diese Exportfilter stammen von <a href="https://www.jabref.org">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
+export.json.faq                     = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) ist ein leichtgewichtiges Austauschformat f\u00FCr die Webprogrammierung mit JavaScript. Mittels der Option <tt>callback</tt> erhalten Sie eine Ausgabe im JSONP-Format.
+export.layout                       = Layout exportieren
+export.rss.faq                      = Mit einem geeigneten <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
+export.swrc.faq                     = Eine <a href="https://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
 
 # RSS feed titles
 feeds.bookmark    = Lesezeichen RSS-Feed f\u00FCr
@@ -1513,13 +1516,16 @@ post.meta.asGroup                                       = f\u00FCr
 post.meta.asPrivate                                     = als
 post.meta.batch_edit                                    = Eigene Eintr\u00E4ge bearbeiten
 post.meta.changedOn                                     = ge\u00E4ndert am
+post.meta.clipboard.title                               = Ablage Aktionen f\u00FCr die angezeigten Eintr\u00E4ge in dieser Liste
 post.meta.copy_this_post                                = Eintrag kopieren
 post.meta.display                                       = Anzeige
 post.meta.documents                                     = Hier finden Sie all Ihre Publikationseintr\u00E4ge mit Dokumenten im Anhang.
 post.meta.duplicates                                    = Alle Publikationen, die Sie mindestens zweimal in Ihrer Sammlung haben.
 post.meta.edit                                          = bearbeiten
 post.meta.edit.title                                    = Alle eigenen Eintr\u00E4ge in dieser Liste bearbeiten
+post.meta.export.title                                  = Exportoptionen f\u00FCr angezeigte Eintr\u00E4ge
 post.meta.filter                                        = Filtern
+post.meta.filter.title                                  = Angezeigte Eintr\u00E4ge filtern
 post.meta.flag_as_spam                                  = Spam
 post.meta.flag_as_spam.title                            = Diesen Eintrag als Spam markieren
 post.meta.helplink                                      = /help_de/PublikationenSortieren
@@ -1542,6 +1548,7 @@ post.meta.sort.criterion                                = sortieren nach
 post.meta.sort.order                                    = Reihenfolge
 post.meta.sort.order.ascending                          = aufsteigend
 post.meta.sort.order.descending                         = absteigend
+post.meta.sortorder.title                               = Reihenfolge oder Sortierung der angezeigten Eintr\u00E4ge \u00E4ndern
 post.meta.taggedBy                                      = von
 post.meta.taggedBy.community                            = von der Gemeinschaft
 post.meta.taggedOn                                      = am
@@ -1860,6 +1867,7 @@ post_bookmark.heading      = Tragen Sie Ihr Lesezeichen hier ein
 
 post_publication.addons.desc        = Sie k\u00F6nnen unser Add-On oder Bookmarklet installieren, um beim Durchsuchen des Webs Publikationen einzutragen. Das System kann automatisch Metainformationen von verschiedenen Verlegern und System extrahieren (<a href="/scraperinfo">vollst\u00E4ndige Liste der unterst\u00FCtzten Seiten</a>).
 post_publication.addons.title       = ODER: Verwenden Sie unser Addon/Bookmarklet um Publikationen w\u00E4hrend Sie das Web durchsuchen einzutragen
+post_publication.desc               = Sie k\u00F6nnen die Publikation, die Sie hinzuf\u00FCgen m\u00F6chten, in unserem Publikationsverzeichnis suchen. Alternativ k\u00F6nnen Sie auch die ISBN, ISSN oder DOI der Publikation eingeben. Wir versuchen dann die Metainformationen der Publikation f\u00FCr Sie herauszufinden.
 post_publication.file.desc          = Laden Sie den Volltext der Publikation hoch. Wir versuchen die Metainformationen der Publikation zu extrahieren.
 post_publication.file.noinfo        = Wir konnten leider keine Metainformationen extrahieren, aber das hochgeladene Dokument wurde diesem Eintrag angeh\u00E4ngt. Bitte geben Sie die Metainformationen per Hand ein.
 post_publication.file.title         = Dokument hochladen
@@ -1868,7 +1876,7 @@ post_publication.search             = Suche nach Publikationen
 post_publication.search.info        = Wenn Sie mehrere Publikationen importieren wollen, verwenden Sie bitte unsere <a href="/import/publications">Import Seite</a>.
 post_publication.search.loading     = Suche nach Publikationen \u2026
 post_publication.search.notfound    = Leider konnten wir keine Publikationen finden. Klicken Sie hier um eine Publikation manuell einzutragen.
-post_publication.search.placeholder = Publikation mittels Titel, ISBN, ISSN oder DOI suchen
+post_publication.search.placeholder = Suchen Sie die Publikation, die Sie hinzuf\u00FCgen m\u00F6chten, in unserem Publikationsverzeichnis
 
 posts = Eintr\u00E4ge
 
@@ -1882,10 +1890,13 @@ previous = &lang;
 
 privacy = Privacy
 
-publication.documents.rename          = Dokument umbenennen
-publication.documents.rename.progress = Benenne Dokument um
-publication.documents.rename.success  = Dokument umbenannt.
-publication.import.title              = Publikationen importieren
+publication.documents.rename            = Dokument umbenennen
+publication.documents.rename.progress   = Benenne Dokument um
+publication.documents.rename.success    = Dokument umbenannt.
+publication.export.simple_bibtex.title  = Diese Publikation im BibTeX-Format anzeigen
+publication.export.simple_endnote.title = Diese Publikation im EndNote-Format exportieren
+publication.export.title                = Diese Publikation im {0} Format anzeigen
+publication.import.title                = Publikationen importieren
 
 publications = Publikationen
 
@@ -2100,6 +2111,9 @@ settings.editPublication.interFace.help.advanced            = {0}: Alle Optionen
 settings.editPublication.interFace.help.simple              = {0}: Einige "Experten"-Optionen werden nicht standardm\u00E4\u00DFig angezeigt.
 settings.enabled                                            = Aktiviert
 settings.english                                            = Englisch
+settings.favouriteExports                                   = Bevorzugte Exportformate
+settings.favouriteExports.add                               = Exportformat hinzuf\u00FCgen
+settings.favouriteExports.hint                              = Die Zitationsstile, die in der unteren Tableiste angezeigt werden, k\u00F6nnen Sie in den <a href="{0}">Einstellungen</a> \u00E4ndern.
 settings.female                                             = Frau
 settings.frequency                                          = H\u00E4ufigkeit
 settings.friendOf                                           = Ich bin ein Freund von
@@ -2132,6 +2146,8 @@ settings.group.delUser.button.title                         = Diesen Nutzer aus 
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
 settings.group.delete                                       = Gruppe l\u00F6schen
+settings.group.delete.description                           = Geben Sie den Namen der Gruppe ein, die gel\u00F6scht werden soll. Alle Mitglieder dieser Gruppe werden aus ihr entfernt. Danach wird die Gruppe gel\u00F6scht.
+settings.group.delete.success                               = Gruppe wurde erfolgreich gel\u00F6scht.
 settings.group.deleteRequest                                = Anfrage l\u00F6schen
 settings.group.deleteRequest.title                          = L\u00F6scht die Anfrage zur Gruppenerstellung
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
