added new IEEE scraper functionality updated test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
@@ -1,7 +1,7 @@
 @INPROCEEDINGS{4536262,
 
 author={S. Pakin},
-  booktitle={Parallel and Distributed Processing, 2008. IPDPS 2008. IEEE International Symposium on}, 
+  booktitle={2008 IEEE International Symposium on Parallel and Distributed Processing}, 
  title={Receiver-initiated message passing over RDMA Networks}, 
   year={2008},
   pages={1-12},
