--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest1.bib
@@ -1,7 +1,7 @@
 @INPROCEEDINGS{5286085,
 
 author={F. Limpens and F. Gandon and M. Buffa},
-  booktitle={Web Intelligence and Intelligent Agent Technologies, 2009. WI-IAT '09. IEEE/WIC/ACM International Joint Conferences on}, 
+  booktitle={2009 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology}, 
  title={Collaborative Semantic Structuring of Folksonomies}, 
   year={2009},
   volume={1},
