updated IEEEXploreJournalProceedings and IEEEXploreStandards Scrapers and Tests

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest1.bib
@@ -9,5 +9,5 @@ author={E. Cem and T. Koc and O. Ozkasap},
   keywords={computer network reliability;overlay networks;peer-to-peer computing;power aware computing;protocols;resource allocation;data aggregation;distributed protocols;energy cost model;energy efficient hierarchical epidemics;epidemic protocol;flat neighborhood epidemics;frequent item set discovery;gossip-based mechanisms;load-balancing;peer power consumption;peer-to-peer systems;power awareness features;power-aware hierarchical epidemic approach;unstructured P2P networks;Barium;Convergence;Energy consumption;Erbium;Peer to peer computing;Protocols;Topology;dominating set;energy cost model;energy efficiency;epidemic;gossip-based;peer-to-peer},
   doi={10.1109/ICEAC.2011.6136685},
   ISSN={2381-0947},
-  month={Nov},url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?tp=&arnumber=6136685&contentType=Conference+Publications&searchField%3DSearch_All%26queryText%3DEnergy+efficient+hierarchical+epidemics+in+peer-to-peer+systems}
+  month={Nov},url = {http://ieeexplore.ieee.org/document/6136685/?tp=&arnumber=6136685&contentType=Conference%20Publications&searchField%3DSearch_All%26queryText%3DEnergy%20efficient%20hierarchical%20epidemics%20in%20peer-to-peer%20systems}
 }
