--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
@@ -9,5 +9,5 @@ author={S. Pakin},
   keywords={electronic data interchange;file organisation;message passing;Cell Broadband Engine;Put/Get hardware;RDMA networks;point to point messaging passing semantics;receiver initiated message passing;remote direct memory access;sender initiated message passing;Central Processing Unit;Delay;Engines;Ethernet networks;Hardware;Laboratories;Measurement standards;Message passing;Performance analysis;Protocols},
   doi={10.1109/IPDPS.2008.4536262},
   ISSN={1530-2075},
-  month={April},url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=4536262}
+  month={April},url = {http://ieeexplore.ieee.org/document/4536262/?arnumber=4536262}
 }
